[tool.poetry]
name = "repl_nix_DiscordBotRailway"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
aiohttp = "^3.8.3"
discord = "^2.1.0"
flickrapi = "^2.4.0"
opencv-python = "^4.7.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
